src/test/resources/highlighting/ComplianceProblems.cirjson
{
  <error descr="CirJSON standard does not allow comments">/* Property key checks */</error>
  "__cirJsonId__": "1",
  "dependencies": {
      "__cirJsonId__": "2",
      <error descr="CirJSON standard does not allow such tokens">@foo/bar</error>: <error descr="CirJSON standard does not allow such tokens">^0.1</error>,
      <error descr="CirJSON standard does not allow such tokens">foo.bar</error>: <error descr="CirJSON standard does not allow such tokens">=1.2</error>
  },
  "someArray": ["3"],
  "key1": null,
  <error descr="CirJSON standard allows only double-quoted string as property key"><error descr="CirJSON standard does not allow single quoted strings">'key2'</error></error>: null,
  <error descr="CirJSON standard does not allow such tokens">key3</error>: null,
  <error descr="CirJSON standard allows only double-quoted string as property key">42</error>: null,

  <error descr="CirJSON standard does not allow comments">// Property value checks</error>
  "key4": "foo",
  "key5": <error descr="CirJSON standard does not allow single quoted strings">'foo'</error>,
  "key6": <error descr="CirJSON standard does not allow such tokens">foo</error>,
  "key7": ["4", 42<error descr="CirJSON standard does not allow trailing comma">,</error>],
  "key8": null,
  "key9": false<error descr="CirJSON standard does not allow trailing comma">,</error>
}
<error descr="CirJSON standard allows only one top-level value">["another", "top-level", "value"]</error>
<error descr="CirJSON standard allows only one top-level value">null</error>